# size_project

backend/: main.py  pyproject.toml
backend/app/routers/: file.py
backend/app/utils/: file_processing.py
frontend/vite_size_project/: package-lock.json  package.json
frontend/vite_size_project/src/: App.vue
frontend/vite_size_project/src/components/: FileUpload.vue
